# RAG

./: .gitignore  README.md
backend/: .env.template  main.py  pyproject.toml
backend/app/: routes.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  chunking.py  embedding.py  llm.py  retrieval.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AnswerDisplay.js  DocumentUpload.js  Evaluation.js  Icons.js  QueryInterface.js
frontend/src/services/: api.js
